[gd_scene load_steps=123 format=3 uid="uid://dci50jyq4qgvb"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_g02tt"]
[ext_resource type="Texture2D" uid="uid://cfork88l2b1m1" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Back animations/spr_player_back_attack.png" id="2_gogul"]
[ext_resource type="Texture2D" uid="uid://by8ro3a74hmvv" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Back animations/spr_player_back_idle.png" id="3_yblft"]
[ext_resource type="Texture2D" uid="uid://btmshq8r2s4b0" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Back animations/spr_player_back_walk.png" id="4_2qqsk"]
[ext_resource type="Texture2D" uid="uid://dks2jamio3gex" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Front animations/spr_player_front_attack.png" id="5_volhp"]
[ext_resource type="Texture2D" uid="uid://dl5hpp352ijtm" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Front animations/spr_player_front_idle.png" id="6_4v35k"]
[ext_resource type="Texture2D" uid="uid://dvdoiydv8x714" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Front animations/spr_player_front_walk.png" id="7_76q6i"]
[ext_resource type="Texture2D" uid="uid://7mhxymss2lto" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_left_attack.png" id="8_rxhoq"]
[ext_resource type="Texture2D" uid="uid://cmqcxcwqpyo4w" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_left_idle.png" id="9_af12j"]
[ext_resource type="Texture2D" uid="uid://do318uermyd" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_left_walk.png" id="10_1orhe"]
[ext_resource type="Texture2D" uid="uid://df2fds2k1we3" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_right_attack.png" id="11_b8x8h"]
[ext_resource type="Texture2D" uid="uid://b7rki6m1jpgrm" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_right_idle.png" id="12_rl0ab"]
[ext_resource type="Texture2D" uid="uid://codp8xvshn2qr" path="res://assets/Pixelarium - Playable Character - Free Version/Pixelarium - Playable Character - Free Version/Pack Content/Side animations/spr_player_right_walk.png" id="13_1pm07"]
[ext_resource type="PackedScene" uid="uid://e77hw56ynywt" path="res://Components/ability_catalog_component.tscn" id="15_qu3wg"]
[ext_resource type="PackedScene" uid="uid://cdoyhriv36rm3" path="res://Components/health_component.tscn" id="15_yf0ou"]
[ext_resource type="PackedScene" uid="uid://xsf1oxypnpyk" path="res://Components/hurtbox_component.tscn" id="16_5l3x7"]
[ext_resource type="PackedScene" uid="uid://dmlnwioja4n65" path="res://Components/movement_component.tscn" id="17_sncmp"]
[ext_resource type="PackedScene" uid="uid://bfxb6uro27ceh" path="res://Components/input_handler_component.tscn" id="18_hxxr5"]
[ext_resource type="PackedScene" uid="uid://cw5mav0m0jou3" path="res://Components/animator_component.tscn" id="19_n2ap4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lew5w"]
radius = 4.2
height = 19.2

[sub_resource type="AtlasTexture" id="AtlasTexture_vism8"]
atlas = ExtResource("2_gogul")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h45jl"]
atlas = ExtResource("2_gogul")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60utm"]
atlas = ExtResource("2_gogul")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxw80"]
atlas = ExtResource("2_gogul")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw5vi"]
atlas = ExtResource("2_gogul")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42lyu"]
atlas = ExtResource("2_gogul")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yahbw"]
atlas = ExtResource("2_gogul")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0uo7"]
atlas = ExtResource("3_yblft")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aieg"]
atlas = ExtResource("3_yblft")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqk6n"]
atlas = ExtResource("3_yblft")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3frvi"]
atlas = ExtResource("3_yblft")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r67tu"]
atlas = ExtResource("3_yblft")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5rg4"]
atlas = ExtResource("3_yblft")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wt84"]
atlas = ExtResource("3_yblft")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4nmu"]
atlas = ExtResource("3_yblft")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8r42"]
atlas = ExtResource("3_yblft")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0oop"]
atlas = ExtResource("3_yblft")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqlak"]
atlas = ExtResource("3_yblft")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mlpe"]
atlas = ExtResource("3_yblft")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nayi"]
atlas = ExtResource("5_volhp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xafp"]
atlas = ExtResource("5_volhp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l1gd"]
atlas = ExtResource("5_volhp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhgag"]
atlas = ExtResource("5_volhp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkabs"]
atlas = ExtResource("5_volhp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1v68"]
atlas = ExtResource("5_volhp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_leg6f"]
atlas = ExtResource("5_volhp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_760b2"]
atlas = ExtResource("6_4v35k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1afuu"]
atlas = ExtResource("6_4v35k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm4l1"]
atlas = ExtResource("6_4v35k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4jhp"]
atlas = ExtResource("6_4v35k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_360on"]
atlas = ExtResource("6_4v35k")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu4e6"]
atlas = ExtResource("6_4v35k")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vevva"]
atlas = ExtResource("6_4v35k")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_or0ls"]
atlas = ExtResource("6_4v35k")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbb5m"]
atlas = ExtResource("6_4v35k")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7qy2"]
atlas = ExtResource("6_4v35k")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxybw"]
atlas = ExtResource("6_4v35k")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bajpc"]
atlas = ExtResource("6_4v35k")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7npg"]
atlas = ExtResource("8_rxhoq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1bih"]
atlas = ExtResource("8_rxhoq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qxn2"]
atlas = ExtResource("8_rxhoq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6pi"]
atlas = ExtResource("8_rxhoq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfxv4"]
atlas = ExtResource("8_rxhoq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yv7a"]
atlas = ExtResource("8_rxhoq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_obafl"]
atlas = ExtResource("8_rxhoq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_la4ax"]
atlas = ExtResource("9_af12j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew1sy"]
atlas = ExtResource("9_af12j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4g8r"]
atlas = ExtResource("9_af12j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15gie"]
atlas = ExtResource("9_af12j")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iig05"]
atlas = ExtResource("9_af12j")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia15h"]
atlas = ExtResource("9_af12j")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma7nv"]
atlas = ExtResource("9_af12j")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s4eo"]
atlas = ExtResource("9_af12j")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrtms"]
atlas = ExtResource("9_af12j")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v4vu"]
atlas = ExtResource("9_af12j")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0m7j"]
atlas = ExtResource("9_af12j")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pudnx"]
atlas = ExtResource("9_af12j")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1i5e"]
atlas = ExtResource("11_b8x8h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgn80"]
atlas = ExtResource("11_b8x8h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5tbd"]
atlas = ExtResource("11_b8x8h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3onjh"]
atlas = ExtResource("11_b8x8h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coho4"]
atlas = ExtResource("11_b8x8h")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxlke"]
atlas = ExtResource("11_b8x8h")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luy8q"]
atlas = ExtResource("11_b8x8h")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7iss"]
atlas = ExtResource("12_rl0ab")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32r8j"]
atlas = ExtResource("12_rl0ab")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2jal"]
atlas = ExtResource("12_rl0ab")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni0s"]
atlas = ExtResource("12_rl0ab")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbkhi"]
atlas = ExtResource("12_rl0ab")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3jw1"]
atlas = ExtResource("12_rl0ab")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxge3"]
atlas = ExtResource("12_rl0ab")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd8vx"]
atlas = ExtResource("12_rl0ab")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wg23"]
atlas = ExtResource("12_rl0ab")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkfdu"]
atlas = ExtResource("12_rl0ab")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lprco"]
atlas = ExtResource("12_rl0ab")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1st45"]
atlas = ExtResource("12_rl0ab")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1jws"]
atlas = ExtResource("7_76q6i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpows"]
atlas = ExtResource("7_76q6i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amtyx"]
atlas = ExtResource("7_76q6i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r87w4"]
atlas = ExtResource("7_76q6i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuhqc"]
atlas = ExtResource("7_76q6i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch88d"]
atlas = ExtResource("7_76q6i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bk6a"]
atlas = ExtResource("10_1orhe")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lwbs"]
atlas = ExtResource("10_1orhe")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f61r4"]
atlas = ExtResource("10_1orhe")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxhuv"]
atlas = ExtResource("10_1orhe")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08jh0"]
atlas = ExtResource("10_1orhe")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn52n"]
atlas = ExtResource("10_1orhe")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_loffj"]
atlas = ExtResource("13_1pm07")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yox2u"]
atlas = ExtResource("13_1pm07")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnhk7"]
atlas = ExtResource("13_1pm07")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6aem"]
atlas = ExtResource("13_1pm07")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xewkv"]
atlas = ExtResource("13_1pm07")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0e8k"]
atlas = ExtResource("13_1pm07")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvllu"]
atlas = ExtResource("4_2qqsk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0he7a"]
atlas = ExtResource("4_2qqsk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pqw"]
atlas = ExtResource("4_2qqsk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ie50"]
atlas = ExtResource("4_2qqsk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g707x"]
atlas = ExtResource("4_2qqsk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_no1i5"]
atlas = ExtResource("4_2qqsk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0h823"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vism8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h45jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60utm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxw80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw5vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42lyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yahbw")
}],
"loop": true,
"name": &"player_back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0uo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aieg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqk6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3frvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r67tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5rg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wt84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4nmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8r42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0oop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqlak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlpe")
}],
"loop": true,
"name": &"player_back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nayi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xafp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l1gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhgag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkabs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1v68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leg6f")
}],
"loop": true,
"name": &"player_front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_760b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1afuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm4l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4jhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_360on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu4e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vevva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or0ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbb5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7qy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxybw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bajpc")
}],
"loop": true,
"name": &"player_front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7npg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1bih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qxn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfxv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yv7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obafl")
}],
"loop": true,
"name": &"player_left_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew1sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4g8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15gie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iig05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia15h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma7nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s4eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrtms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v4vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0m7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pudnx")
}],
"loop": true,
"name": &"player_left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1i5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgn80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5tbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3onjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coho4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxlke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luy8q")
}],
"loop": true,
"name": &"player_right_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7iss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32r8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2jal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbkhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3jw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxge3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd8vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wg23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkfdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lprco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1st45")
}],
"loop": true,
"name": &"player_right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1jws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpows")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amtyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r87w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuhqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch88d")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bk6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lwbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f61r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxhuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08jh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn52n")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_loffj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yox2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnhk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6aem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xewkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0e8k")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvllu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0he7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ie50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g707x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no1i5")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k31ny"]
radius = 208.56

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(5, 5)
collision_mask = 2
script = ExtResource("1_g02tt")
metadata/_edit_group_ = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.6, 0.4)
shape = SubResource("CapsuleShape2D_lew5w")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.200001, -1.2)
scale = Vector2(1.00625, 0.9875)
sprite_frames = SubResource("SpriteFrames_0h823")
animation = &"walk_right"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="EnemyDetectionBox" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_k31ny")

[node name="AbilityCatalogComponent" parent="." instance=ExtResource("15_qu3wg")]

[node name="HealthComponent" parent="." instance=ExtResource("15_yf0ou")]
max_health = 100

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("collision_area", "health_component") instance=ExtResource("16_5l3x7")]
collision_area = NodePath("../PlayerCollision")
health_component = NodePath("../HealthComponent")

[node name="MovementComponent" parent="." node_paths=PackedStringArray("direction_component", "knock_timer") instance=ExtResource("17_sncmp")]
direction_component = NodePath("../InputHandlerComponent")
knock_timer = NodePath("../KnockTimer")

[node name="KnockTimer" type="Timer" parent="."]

[node name="InputHandlerComponent" parent="." node_paths=PackedStringArray("player_animator") instance=ExtResource("18_hxxr5")]
player_animator = NodePath("../PlayerAnimation")

[node name="AnimatorComponent" parent="." node_paths=PackedStringArray("direction_component") instance=ExtResource("19_n2ap4")]
direction_component = NodePath("../InputHandlerComponent")

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
[connection signal="is_dead" from="HealthComponent" to="." method="_on_health_component_is_dead"]
[connection signal="change_health" from="HurtboxComponent" to="." method="_on_hurtbox_component_change_health"]
[connection signal="change_health" from="HurtboxComponent" to="HealthComponent" method="_on_hurtbox_component_change_health"]
